fix issue with download as .assx